--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       text-shadow: 2px 2px 4px #00000066;
     }
     .container {
-      background-color: rgba(255, 192, 203, 0.8);
+      background-color: rgba(255, 192, 203, 0.6);
       max-width: 600px;
       margin: 2rem auto;
       padding: 2rem;
@@ -57,9 +57,9 @@
     <h1>¡Estás invitado al cumpleaños mágico de Valentina!</h1>
     <p>Valentina Vitora Rodríguez cumple 5 años 🦄</p>
     <p>🎉 Fecha: <strong>14 de junio de 2025</strong></p>
-    <p>🕓 Hora: <strong>16:30</strong></p>
-    <p>📍 Lugar: <strong>Calle Reyes Católicos 1, Boadilla del Monte</strong></p>
-    <p>📞 Confirma tu asistencia antes del <strong>07 de junio</strong> al <strong>630630847</strong></p>
+    <p>🕓 Hora: <strong>16:00</strong></p>
+    <p>📍 Lugar: <strong>C/ Reyes Católicos 1, Boadilla del Monte (Lobby)</strong></p>
+    <p>✨ Confirma tu asistencia antes del <strong>07 de junio</strong></p>
     <form action="https://formspree.io/f/movdypbn" method="POST">
       <input type="text" name="nombre" placeholder="Tu nombre" required />
       <input type="number" name="acompanantes" placeholder="N.º de acompañantes" min="0" required />
